--- a/YOLOv4_Tutorial.ipynb
+++ b/YOLOv4_Tutorial.ipynb
@@ -775,7 +775,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# COMING SOON: HOW TO TRAIN YOUR OWN YOLOv4 CUSTOM OBJECT DETECTOR \n",
+        "# COMING SOON: HOW TO TRAIN YOUR OWN YOLOov4 CUSTOM OBJECT DETECTOR \n",
         "\n",
         "I am currently working on a video showing how to train your very own custom YOLOv4 object detector! So check back to my channel or repository soon. (May already be up by the time you are watching/reading this!)"
       ]
